--- a/.github/workflows/ubu_gcc-15_ompi-5_f_p_issue-6175.yml
+++ b/.github/workflows/ubu_gcc-15_ompi-5_f_p_issue-6175.yml
@@ -112,7 +112,7 @@ jobs:
             -DMPIEXEC_PREFLAGS="--allow-run-as-root" \
             -DHDF5_BUILD_FORTRAN:BOOL=ON \
             -DHDF5_BUILD_CPP_LIB:BOOL=OFF \
-            -DHDF5_BUILD_JAVA:BOOL=OFF \
+            -DHDF5_BUILD_JAVA:BOOL=ON \
             -DHDF5_ENABLE_PARALLEL:BOOL=ON \
             -DSITE:STRING="ubu" \
             -DBUILDNAME:STRING="gcc-15/ompi-5/f/p/issue-6175" \
