--- a/.github/workflows/nvhpc-24.11.yml
+++ b/.github/workflows/nvhpc-24.11.yml
@@ -1,35 +1,35 @@
-name: nvhpc 26.1
+name: nvhpc 24.11
 
 on:
   push:
     branches:
-      - main
+      - main-
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: apt
+      - name: Install System dependencies
         run: |
           sudo apt update
           sudo apt install -y cmake libzip-dev ninja-build
-      - name: nvhpc
+      - name: Install NVHPC
         run: |
           curl https://developer.download.nvidia.com/hpc-sdk/ubuntu/DEB-GPG-KEY-NVIDIA-HPC-SDK | sudo gpg --dearmor -o /usr/share/keyrings/nvidia-hpcsdk-archive-keyring.gpg
           echo 'deb [signed-by=/usr/share/keyrings/nvidia-hpcsdk-archive-keyring.gpg] https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64 /' | sudo tee /etc/apt/sources.list.d/nvhpc.list
           sudo apt-get update -y
-          sudo apt-get install -y nvhpc-26-1
-      - name: hdf5
+          sudo apt-get install -y nvhpc-24-11
+      - name: Test HDF5
         env:
           NPROCS: 2
           CFLAGS: -fPIC -lnvf -lnvomp -ldl -lnvhpcatm -latomic -lpthread -lnvcpumath -lnsnvc -lnvc -lrt -lm -Mbounds  -gopt   -O1
           FCFLAGS: -fPIC -lnvf -lnvomp -ldl -lnvhpcatm -latomic -lpthread -lnvcpumath -lnsnvc -lnvc -lrt -lm
         run: |
-          export CC=/opt/nvidia/hpc_sdk/Linux_x86_64/26.1/comm_libs/openmpi4/bin/mpicc
-          export LD_LIBRARY_PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/26.1/cuda/13.1/lib64:/opt/nvidia/hpc_sdk/Linux_x86_64/26.1/compilers/lib
+          export CC=/opt/nvidia/hpc_sdk/Linux_x86_64/24.11/comm_libs/openmpi4/bin/mpicc
+          export LD_LIBRARY_PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/24.11/cuda/12.6/lib64:/opt/nvidia/hpc_sdk/Linux_x86_64/24.11/compilers/lib
           export NVHPCSDK=/opt/nvidia/hpc_sdk
-          export PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/26.1/comm_libs/openmpi4/bin:/opt/nvidia/hpc_sdk/Linux_x86_64/26.1/compilers/bin:$PATH
+          export PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/24.11/comm_libs/openmpi4/bin:/opt/nvidia/hpc_sdk/Linux_x86_64/24.11/compilers/bin:$PATH
           env
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
