--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,19 +1,20 @@
 name: doxygen gh-pages
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
-      - name: Get Sources
-        uses: actions/checkout@v3
+      - name: checkout
+        uses: actions/checkout@v6
+        with:
+          repository: brtnfld/hdf5
+          ref: dox3
 
-      - name: Install Dependencies
+      - name: apt
         run: |
           sudo apt update -y
           sudo apt install -y libunwind-dev
@@ -21,37 +22,16 @@ jobs:
           sudo apt-get install -y --no-install-recommends doxygen
           sudo apt-get install -y cmake
           
-      - name: Build Develop Documentation
+      - name: build
         run: |
-          git clone https://github.com/HDFGroup/hdf5.git
-          cd hdf5
           mkdir build
           cd build
           cmake -DHDF5_BUILD_DOC:BOOL=ON ..
           make doxygen
 
-      - name: Deploy Develop
+      - name: deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: ./hdf5/build/hdf5lib_docs/html
+          publish_dir: ./build/hdf5lib_docs/html
           destination_dir: develop
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
-
-      - name: Build 1.14.1 Documentation
-        run: |
-          rm -rf ./hdf5
-          git clone https://github.com/HDFGroup/hdf5.git
-          cd hdf5
-          git checkout hdf5-1_14_1-2
-          mkdir build
-          cd build
-          cmake -DHDF5_BUILD_DOC:BOOL=ON ..
-          make doxygen
-
-      - name: Deploy 1.14.1
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          publish_dir: ./hdf5/build/hdf5lib_docs/html
-          destination_dir: 1.14.1
           github_token: ${{ secrets.GITHUB_TOKEN }}
