--- a/.github/workflows/win-25_vs-26_tv.yml
+++ b/.github/workflows/win-25_vs-26_tv.yml
@@ -18,4 +18,4 @@ jobs:
           mkdir build
           cd build
           cmake -DSITE:STRING="win-25" -DBUILDNAME:STRING="vs-26/tv/pr6244" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_TEST_VFD:BOOL=ON ..
-          ctest -D Experimental 
+          ctest -C Release -D Experimental 
